--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
         <link rel="stylesheet" href="./style.css">
         <title>Admin Dashboard</title>
     </head>
-    <body></body>
+    <body>
+        <div class="sidebar"></div>
+        <div class="body-right">
+            <div class="header">
+                <div class="header-top"></div>
+                <div class="header-bottom"></div>
+            </div>
+            <div class="content">
+                <div class="projects"></div>
+                <div class="announcements"></div>
+                <div class="trending"></div>
+            </div>
+        </div>
+    </body>
 </html>
