--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@
         <title>Admin Dashboard</title>
     </head>
     <body>
-        <div class="sidebar"></div>
+        <div class="sidebar">
+            <h1>Dashboard</h1>
+            <ul class="sidebar-row1">
+                <li>
+                    <img src="./images/home.svg" alt="">
+                    <p>Home</p>
+                </li>
+                <li>
+                    <img src="./images/profile.svg" alt="">
+                    <p>Profile</p>
+                </li>
+                <li>
+                    <img src="./images/message-badge.svg" alt="">
+                    <p>Messages</p>
+                </li>
+                <li>
+                    <img src="./images/history.svg" alt="">
+                    <p>History</p>
+                </li>
+                <li>
+                    <img src="./images/tasks.svg" alt="">
+                    <p>Tasks</p>
+                </li>
+                <li>
+                    <img src="./images/communities.svg" alt="">
+                    <p>Communities</p>
+                </li>
+            </ul>
+            <ul class="sidebar-row2">
+                <li>
+                    <img src="./images/settings.svg" alt="">
+                    <p>Settings</p>
+                </li>
+                <li>
+                    <img src="./images/support.svg" alt="">
+                    <p>Support</p>
+                </li>
+                <li>
+                    <img src="./images/privacy.svg" alt="">
+                    <p>Privacy</p>
+                </li>
+            </ul>
+        </div>
         <div class="body-right">
             <div class="header">
                 <div class="header-top"></div>
