--- a/index.html
+++ b/index.html
@@ -53,7 +53,17 @@
         </div>
         <div class="body-right">
             <div class="header">
-                <div class="header-top"></div>
+                <div class="header-top">
+                    <span class="material-symbols-outlined">
+                        search
+                    </span>
+                    <input type="search">
+                    <span class="material-symbols-outlined">
+                        notifications
+                    </span>
+                    <img src="./images/Quote.webp" alt="">
+                    <h1>Quote CS</h1>
+                </div>
                 <div class="header-bottom"></div>
             </div>
             <div class="content">
