feat:Add header bottom content

--- a/index.html
+++ b/index.html
@@ -64,7 +64,18 @@
                     <img src="./images/Quote.webp" alt="">
                     <h1>Quote CS</h1>
                 </div>
-                <div class="header-bottom"></div>
+                <div class="header-bottom">
+                    <div class="welcome-message">
+                        <img id="welcome-img" src="./images/Quote.webp" alt="">
+                        <p>Hello there,</p>
+                        <h1>Quote Cave Story</h1>
+                    </div>
+                    <div class="button-container">
+                        <button type="button">New</button>
+                        <button type="button">Upload</button>
+                        <button type="button">Share</button>
+                    </div>
+                </div>
             </div>
             <div class="content">
                 <div class="projects"></div>
