feat:Nest welcome msg text in div

--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                 <div class="header-bottom">
                     <div class="welcome-message">
                         <img id="welcome-img" src="./images/Quote.webp" alt="">
-                        <p>Hello there,</p>
-                        <h1>Quote Cave Story</h1>
+                        <div>
+                            <p>Hello there,</p>
+                            <h1>Quote Cave Story</h1>
+                        </div>
                     </div>
                     <div class="button-container">
                         <button type="button">New</button>
