feat:Add content div elements

--- a/index.html
+++ b/index.html
@@ -80,9 +80,157 @@
                 </div>
             </div>
             <div class="content">
-                <div class="projects"></div>
-                <div class="announcements"></div>
-                <div class="trending"></div>
+                <div class="projects">
+                    <h2>Your projects</h2>
+                    <div class="project-card">
+                        <text>
+                            <h3>Project 1</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, amet! Recusandae ea eveniet fuga hic totam deserunt dolor fugiat autem minima! Unde possimus dolores, voluptas nobis tenetur voluptate voluptatem? Non.</p>
+                        </text>
+                        <div class="card-icons">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <text>
+                            <h3>Project 2</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique iusto nemo! Cupiditate repellat porro, sunt nesciunt debitis atque dolorum labore, tempore ea quam ad fugit vero impedit ipsum a.</p>
+                        </text>
+                        <div class="card-icons">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <text>
+                            <h3>Project 3</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore saepe facilis quas molestias quo, minus nam eveniet cupiditate eius ad consectetur voluptate? Consectetur cumque accusamus aliquid minima voluptate? Incidunt, dolorum!</p>
+                        </text>
+                        <div class="card-icons">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <text>
+                            <h3>Project 4</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente asperiores vel ullam odit recusandae dolores voluptatum tempora eaque neque illum, corrupti error perspiciatis exercitationem minima hic tempore facilis, minus deserunt.</p>
+                        </text>
+                        <div class="card-icons">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <text>
+                            <h3>Project 5</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla ipsa enim id ea, officia a, placeat temporibus vitae necessitatibus velit magnam corporis natus rem iure? Vel similique nostrum id at!</p>
+                        </text>
+                        <div class="card-icons">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <text>
+                            <h3>Project 6</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat sapiente dolorum expedita magni. Tempora quasi odit saepe doloremque qui libero voluptate corporis odio nihil, consequatur numquam reprehenderit quis voluptas ut.</p>
+                        </text>
+                        <div class="card-icons">
+                            <span class="material-symbols-outlined">
+                                star
+                            </span>
+                            <span class="material-symbols-outlined">
+                                visibility
+                            </span>
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="announcements">
+                    <h2>Announcements</h2>
+                    <div class="site-maintenance">
+                        <h3>Site maintenance</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus fugiat voluptas maxime quo? A, cumque? Autem dicta velit aspernatur id vel qui iure possimus veritatis, maxime odit quae eligendi sapiente?</p>
+                    </div>
+                    <div class="community-share-day">
+                        <h3>Community share day</h3>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias et nulla perspiciatis pariatur illum nesciunt officiis debitis id numquam, sapiente distinctio perferendis, repudiandae sed rerum quaerat, soluta possimus reprehenderit itaque?</p>
+                    </div>
+                    <div class="privacy-policy">
+                        <h3>Updated privacy policy</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse vero itaque delectus quis modi iusto quo quas fugiat. Temporibus atque totam dicta nihil modi velit sint quas inventore debitis.</p>
+                    </div>
+                </div>
+                <div class="trending">
+                    <h2>Trending</h2>
+                    <div class="trending-user">
+                        <img src="./images/Quote.webp" alt="">
+                        <div>
+                            <h4>@Quote</h4>
+                            <p>OMG QUOTE CAVE STORY</p>
+                        </div>
+                    </div>
+                    <div class="trending-user">
+                        <img src="./images/megaman.png" alt="">
+                        <div>
+                            <h4>@Megaman</h4>
+                            <p>Megaman is based</p>
+                        </div>
+                    </div>
+                    <div class="trending-user">
+                        <img src="./images/Kirby.png" alt="">
+                        <div>
+                            <h4>@Kirby</h4>
+                            <p>POYO!</p>
+                        </div>
+                    </div>
+                    <div class="trending-user">
+                        <img src="./images/sonic.jpeg" alt="">
+                        <div>
+                            <h4>@Sanik</h4>
+                            <p>GOTTA GO FAST!</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
